--- a/List_Item_Addition/style.css
+++ b/List_Item_Addition/style.css
@@ -21,6 +21,9 @@ body{
 
 #form-section{
     margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 input {
@@ -36,15 +39,6 @@ button{
     border-radius: 4px;
 }
 
-
-#list-items{
-margin-top:20px;
-}
-
-
-#btn{
-    margin-left: 10px;
-}
 li{
 margin: 25px;
 border-radius: 4px;
@@ -53,3 +47,8 @@ padding: 8px;
 background-color: white;
 text-align: center;
 }
+
+#btns{
+    margin: 15px;
+}
+
